meer aan duits, begin van polls

--- a/case-competition-typology.tex
+++ b/case-competition-typology.tex
@@ -26,7 +26,7 @@ Metaphorically, the second aspect can be described as a language-specific approv
 
 Taking this all together, there are four patterns possible in languages. First, the internal case and the external case are allowed to surface. Second, only the internal case is allowed to surface, and the external case is not. Third, only the external case is allowed to surface, and the internal case is not. Fourth, neither the internal case nor the external case is allowed to surface when either of them wins the competition. In what follows, I introduce these four possible patterns.
 
-The first possible pattern is that of a language that allows the internal case and the external case to surface when either of them wins the case competition. I call this the non-matching type of language \citep[just as cf.][]{grosu1987,cinqueforthcoming}: the internal and external case do not need to match. The pattern might look familiar, because it is the one that Gothic has, which I discussed in Chapter \ref{ch:recurring}. Table \ref{tbl:case-competition-int-ext} (repeated from Table \ref{tbl:summary-gothic-simple}) illustrates what the pattern for such a language looks like.
+The first possible pattern is that of a language that allows the internal case and the external case to surface when either of them wins the case competition. I call this the unrestricted type of language \citep[just as cf.][]{grosu1987,cinqueforthcoming}: the internal and external case do not need to match. The pattern might look familiar, because it is the one that Gothic has, which I discussed in Chapter \ref{ch:recurring}. Table \ref{tbl:case-competition-int-ext} (repeated from Table \ref{tbl:summary-gothic-simple}) illustrates what the pattern for such a language looks like.
 
 The left column shows the internal case between square brackets. The top row shows the external case between square brackets. The other cells indicate the case of the relative pronoun.
 The top-left to bottom-right diagonal corresponds to the examples in which the internal and external case match. The three cells in the bottom-left corner, marked in light gray, are the situations in which the internal case surfaces when it wins the competition. The three cells in the top-right corner, marked in dark gray, are the situations in which the external case surfaces when it wins the competition.
@@ -62,12 +62,12 @@ All these instances are grammatical.
     \label{tbl:case-competition-int-ext}
 \end{table}
 
-The second possible pattern is that of a language that allows the internal case to surface when it wins the case competition, but it does not allow the external case to do so. In this type of language, the internal case gets to surface when it is more complex than the external one. When the external case is more complex, it is not allowed to surface, and the headless relative construction is ungrammatical. I call this the `non-matching --- internal only' type of language: the internal and external case do not need to match, but only the internal case is allowed to surface as a winner.
+The second possible pattern is that of a language that allows the internal case to surface when it wins the case competition, but it does not allow the external case to do so. In this type of language, the internal case gets to surface when it is more complex than the external one. When the external case is more complex, it is not allowed to surface, and the headless relative construction is ungrammatical. I call this the internal-only type of language: the internal and external case do not need to match, but only the internal case is allowed to surface as a winner.
 
-Table \ref{tbl:case-competition-only-int} illustrates what the pattern for such a language looks like. Compared to the `non-matching' type, it has three cells in which there is no grammatical relative pronoun.
+Table \ref{tbl:case-competition-only-int} illustrates what the pattern for such a language looks like. Compared to the unrestricted type, it has three cells in which there is no grammatical relative pronoun.
 The top-left to bottom-right diagonal corresponds to the examples in which the internal and external case match.
 The three cells in the bottom-left corner, marked in light gray, are the situations in which the internal case surfaces when it wins the competition.
-Just as in the `non-matching' type, these six instances are grammatical.
+Just as in the unrestricted type, these six instances are grammatical.
 The three cells in the top-right corner, marked in dark gray, are the situations in which the external case surfaces when it wins the competition. These instances are not grammatical for this type of language. The reasoning behind that is that the language does not allow the external case to surface when it wins the case competition.
 
 \begin{table}[H]
@@ -100,12 +100,12 @@ The three cells in the top-right corner, marked in dark gray, are the situations
     \label{tbl:case-competition-only-int}
 \end{table}
 
-The third possible pattern is that of a language that allows the external case to surface when it wins the case competition, but it does not allow the internal case to do so. In this type of language, only the external case gets to surface when it is more complex. When the internal case is more complex, it is not allowed to surface, and the headless relative construction is ungrammatical. I call this the `non-matching --- external only' type of language: the internal and external case do not need to match, but only the external case is allowed to surface as a winner.
+The third possible pattern is that of a language that allows the external case to surface when it wins the case competition, but it does not allow the internal case to do so. In this type of language, only the external case gets to surface when it is more complex. When the internal case is more complex, it is not allowed to surface, and the headless relative construction is ungrammatical. I call this the external-only type of language: the internal and external case do not need to match, but only the external case is allowed to surface as a winner.
 
 Table \ref{tbl:case-competition-only-ext} illustrates what the pattern for such a language looks like. Comparing this pattern to the second one, the ungrammatical cells are here the three on the other side of the diagonal.
-The top-left to bottom-right diagonal corresponds to the examples in which the internal and external case match. Just as in the `non-matching' type and the `non-matching --- internal-only' type, these instances are grammatical.
-The three cells in the bottom-left corner, marked in light gray, are the situations in which the internal case surfaces when it wins the competition. Unlike in the `non-matching' type and the `non-matching --- internal-only' type, these instances are not grammatical for this type of language. The reasoning behind that is that the language does not allow the internal case to surface when it wins the case competition.
-The three cells in the top-right corner, marked in dark gray, are the situations in which the external case surfaces when it wins the competition. Just as in the `non-matching' type but unlike in the `non-matching --- internal-only' type, these instances are grammatical.
+The top-left to bottom-right diagonal corresponds to the examples in which the internal and external case match. Just as in the unrestricted type and the `unrestricted --- internal-only' type, these instances are grammatical.
+The three cells in the bottom-left corner, marked in light gray, are the situations in which the internal case surfaces when it wins the competition. Unlike in the unrestricted type and the `unrestricted --- internal-only' type, these instances are not grammatical for this type of language. The reasoning behind that is that the language does not allow the internal case to surface when it wins the case competition.
+The three cells in the top-right corner, marked in dark gray, are the situations in which the external case surfaces when it wins the competition. Just as in the unrestricted type but unlike in the `unrestricted --- internal-only' type, these instances are grammatical.
 
 \begin{table}[H]
   \center
@@ -137,12 +137,12 @@ The three cells in the top-right corner, marked in dark gray, are the situations
     \label{tbl:case-competition-only-ext}
 \end{table}
 
-The fourth possible pattern is that of a language that allows neither the internal case nor the external case to surface when either of them wins the competition. In other words, when the internal and the external case differ, there is no grammatical headless relative construction possible. Only when there is a tie, i.e. when the internal and external case match, there is a grammatical result. I call this the `matching' type of language: the internal and external case need to match.
+The fourth possible pattern is that of a language that allows neither the internal case nor the external case to surface when either of them wins the competition. In other words, when the internal and the external case differ, there is no grammatical headless relative construction possible. Only when there is a tie, i.e. when the internal and external case match, there is a grammatical result. I call this the matching type of language: the internal and external case need to match.
 
 Table \ref{tbl:case-competition-none} illustrates what the pattern for such a language looks like.
 The top-left to bottom-right diagonal corresponds to the examples in which the internal and external case match. Just as in the other three pattern, these instances are grammatical.
-The three cells in the bottom-left corner, marked in light gray, are the situations in which the internal case surfaces when it wins the competition. Just as the `non-matching --- external-only' type, but unlike the `non-matching' type and the `non-matching --- internal-only' type, these instances are not grammatical for this type of language.
-The three cells in the top-right corner, marked in dark gray, are the situations in which the external case surfaces when it wins the competition. Just as the `non-matching --- internal-only' type, but unlike the `non-matching' type and the `non-matching --- external-only' pattern, these instances are not grammatical for this type of language. The reasoning behind the ungrammaticality of these six cells is that the language allows neither the internal case nor the external case to surface when either of them wins the competition.
+The three cells in the bottom-left corner, marked in light gray, are the situations in which the internal case surfaces when it wins the competition. Just as the `unrestricted --- external-only' type, but unlike the unrestricted type and the `unrestricted --- internal-only' type, these instances are not grammatical for this type of language.
+The three cells in the top-right corner, marked in dark gray, are the situations in which the external case surfaces when it wins the competition. Just as the `unrestricted --- internal-only' type, but unlike the unrestricted type and the `unrestricted --- external-only' pattern, these instances are not grammatical for this type of language. The reasoning behind the ungrammaticality of these six cells is that the language allows neither the internal case nor the external case to surface when either of them wins the competition.
 
 On the surface, this pattern cannot be distinguished from a pattern that does not have case competition and does not allow for any case mismatches. I understand `a language with case competition' as a language that compares the internal and external case in its headless relatives. If the internal and external case are not compared in this type of language, it would be unclear why the diagonal is different from all the other cells. The source of ungrammaticality for the cells in Table \ref{tbl:case-competition-none} can only come from the comparing the internal and external case and concluding that the internal case and the external case differ. The grammaticality of the diagonal follows from the conclusion that the internal and the external case match. In Section \ref{sec:without-case-competition} I discuss languages in which the internal and external case are not compared to each other.
 
@@ -176,7 +176,7 @@ On the surface, this pattern cannot be distinguished from a pattern that does no
     \label{tbl:case-competition-none}
 \end{table}
 
-In this chapter I show that three of these four patterns I introduced are attested crosslinguistically. Section \ref{sec:pattern-i} shows that the `non-matching' type, in which either the internal case or the external case can surface, is exemplified by Gothic (repeated from Chapter \ref{ch:recurring}) and by Old High German. The `non-matching --- internal-only' type, in which only the internal case can surface, is illustrated by Modern German in Section \ref{sec:pattern-ii}. To my knowledge, there is no language in which only the external case can surface when it wins the case competition. This is discussed in \ref{sec:pattern-iii}. Section \ref{sec:pattern-iv} shows a language that only allows the case to surface when there is a tie, i.e. when the internal and external case match, namely Polish.
+In this chapter I show that three of these four patterns I introduced are attested crosslinguistically. Section \ref{sec:pattern-i} shows that the unrestricted type, in which either the internal case or the external case can surface, is exemplified by Gothic (repeated from Chapter \ref{ch:recurring}) and by Old High German. The `unrestricted --- internal-only' type, in which only the internal case can surface, is illustrated by Modern German in Section \ref{sec:pattern-ii}. To my knowledge, there is no language in which only the external case can surface when it wins the case competition. This is discussed in \ref{sec:pattern-iii}. Section \ref{sec:pattern-iv} shows a language that only allows the case to surface when there is a tie, i.e. when the internal and external case match, namely Polish.
 
 \section{Internal and external case allowed}\label{sec:pattern-i}
 
@@ -887,7 +887,7 @@ This example is compatible with the picture of Classical Greek only allowing the
     \label{tbl:case-competition-ag-poss1}
 \end{table}
 
-However, the example in \ref{ex:ag-dat-acc} is not only compatible with the external-only type. Considering only the example I have given so far, it is still possible for Classical Classical Greek to be of the `non-matching' type. I repeat Table \ref{tbl:case-competition-int-ext-repeated} from Section \ref{sec:pattern-i} as Table \ref{tbl:case-competition-ag-poss2}, and I mark the cell that corresponds to the example in \ref{ex:ag-dat-acc} in gray.
+However, the example in \ref{ex:ag-dat-acc} is not only compatible with the external-only type. Considering only the example I have given so far, it is still possible for Classical Classical Greek to be of the unrestricted type. I repeat Table \ref{tbl:case-competition-int-ext-repeated} from Section \ref{sec:pattern-i} as Table \ref{tbl:case-competition-ag-poss2}, and I mark the cell that corresponds to the example in \ref{ex:ag-dat-acc} in gray.
 
 \begin{table}[H]
   \center
@@ -978,7 +978,7 @@ This section discusses the situation in which the case is neither the internal c
 
 \begin{table}[H]
   \center
-  \caption{The `matching' type (repeated)}
+  \caption{The matching type (repeated)}
   \begin{tabular}{c|c|c|c}
     \toprule
     \textsubscript{\ac{int}} \textsuperscript{\ac{ext}}
@@ -1159,17 +1159,17 @@ The second aspect is whether the internal and the external case are allowed to s
 
 \ex. Logically possibile language types\label{ex:logical-possibilities}
 \let\oldalph=\alph\let\alph=\roman
-\a. The `non-matching' type: the internal and the external case are allowed to surface when either of them wins the case competition\label{ex:int-ext}
-\b. The `non-matching --- internal only' type: only the internal case is allowed to surface when it wins the case competition\label{ex:int-only}
-\b. The `non-matching --- external only' type: only the external case is allowed to surface when it wins the case competition\label{ex:ext-only}
-\b. The `matching' type: neither the internal case nor in the external case is allowed to surface when either of them wins the case competition\label{ex:matching}
+\a. The unrestricted type: the internal and the external case are allowed to surface when either of them wins the case competition\label{ex:int-ext}
+\b. The internal-only type: only the internal case is allowed to surface when it wins the case competition\label{ex:int-only}
+\b. The external-only type: only the external case is allowed to surface when it wins the case competition\label{ex:ext-only}
+\b. The matching type: neither the internal case nor in the external case is allowed to surface when either of them wins the case competition\label{ex:matching}
 \global\let\alph=\oldalph
 
 As far as I am aware, not all of these logical possibilities are attested in natural languages. I discuss the types one by one, and I give example when they are attested. In my description, I refer to the differ gray-marking in Table \ref{tbl:case-competition-table-marking}. The cells marked in light gray are the ones in which the internal case wins the case competition, the cells marked in dark gray are the ones in which the external case wins the case competition, and the unmarked cells are the ones in which the internal and external case match.
 
-Gothic, Old High German and Classical Greek are examples of the `non-matching' type in \ref{ex:int-ext}. In these languages, relative pronouns in the unmarked, light gray and dark gray cells are attested.
-Modern German is an example of the `non-matching --- internal-only' type in \ref{ex:int-only}. In this language, relative pronouns in the unmarked and light gray cells are grammatical.
-To my knowledge, the `non-matching --- external-only' type in \ref{ex:ext-only} is not attested. This would be a language in which relative pronouns in the unmarked and the dark gray cells are grammatical.
+Gothic, Old High German and Classical Greek are examples of the unrestricted type in \ref{ex:int-ext}. In these languages, relative pronouns in the unmarked, light gray and dark gray cells are attested.
+Modern German is an example of the `unrestricted --- internal-only' type in \ref{ex:int-only}. In this language, relative pronouns in the unmarked and light gray cells are grammatical.
+To my knowledge, the `unrestricted --- external-only' type in \ref{ex:ext-only} is not attested. This would be a language in which relative pronouns in the unmarked and the dark gray cells are grammatical.
 Polish is an example of a language of the matching type in \ref{ex:matching}. In this language, relative pronoun in only in the unmarked cells are grammatical.
 
 \begin{table}[H]
@@ -1209,9 +1209,9 @@ If a language does not allow for a mismatch, the matching type of language \ref{
 If a language allows for a mismatch between the internal and external case, the second parameter comes into play. This one is concerned with the case the relative pronoun is allowed to surface when it wins the case competition. Here I give two options: (1) it is allowed to surface in only the internal case or (2) it is allowed to surface in the internal and the external case.\footnote{
 I do not introduce the option of allowing the relative pronoun to surface only in the external case. The reason for this is that this pattern is not attested crosslinguistically. If a language like this appears, this option could in principle be added. However, I predict that it will not appear. In Chapter \ref{ch:relativization}, I show how it follows from general properties of relative clauses that this type of language is excluded.
 }
-If a language allows the internal case to surface when it wins the case competition, the `non-matching --- internal-only' type is generated.
-If a language allows the internal and the external case to surface, the `non-matching' type is generated.\footnote{
-The matching type could also have been generated with the second parameter. The text along the arrow would have been \tit{none}. I choose to not do this, because in Chapter \ref{ch:relativization} I propose separate mechanisms for each of the parameters in Figure \ref{fig:attested-headless-relatives-case-competition}. The first one distinguishes matching languages from non-matching (i.e. `non-matching' and internal-only) languages, and the second one distinguishes `non-matching' from internal-only languages.
+If a language allows the internal case to surface when it wins the case competition, the `unrestricted --- internal-only' type is generated.
+If a language allows the internal and the external case to surface, the unrestricted type is generated.\footnote{
+The matching type could also have been generated with the second parameter. The text along the arrow would have been \tit{none}. I choose to not do this, because in Chapter \ref{ch:relativization} I propose separate mechanisms for each of the parameters in Figure \ref{fig:attested-headless-relatives-case-competition}. The first one distinguishes matching languages from unrestricted (i.e. unrestricted and internal-only) languages, and the second one distinguishes unrestricted from internal-only languages.
 }
 
 \begin{figure}[H]
@@ -1245,7 +1245,7 @@ The matching type could also have been generated with the second parameter. The 
     \label{fig:attested-headless-relatives-case-competition}
 \end{figure}
 
-The main focus of Chapter \ref{ch:relativization} is the linguistic counterpart of the second parameter. I show with general properties of relative clauses how the difference between the `non-matching' and the `non-matching --- internal-only' type can be modeled, and how the exclusion of the `non-matching --- external-only' type follows from these particular properties. I also introduce a linguistic counterpart for the first parameter, which distinguishes matching from non-matching languages.
+The main focus of Chapter \ref{ch:relativization} is the linguistic counterpart of the second parameter. I show with general properties of relative clauses how the difference between the unrestricted and the `unrestricted --- internal-only' type can be modeled, and how the exclusion of the `unrestricted --- external-only' type follows from these particular properties. I also introduce a linguistic counterpart for the first parameter, which distinguishes matching from unrestricted languages.
 
 
 
